--- a/apps/client/src/app/landing/bilva-landing/business-vertical/realty-solution/own-it/solutions/solutions.component.scss
+++ b/apps/client/src/app/landing/bilva-landing/business-vertical/realty-solution/own-it/solutions/solutions.component.scss
@@ -1,9 +1,3 @@
-img.logo {
-  display: inline;
-  height: 1em;
-  margin-bottom: -0.25em;
-}
-
 img.reality-solution {
   min-height: 20em;
   height: 20em;
